--- a/src/main/res/layout/activity_my_apply.xml
+++ b/src/main/res/layout/activity_my_apply.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.a1.mydidi.view.MyApplyActivity">
+    tools:context="">
 
     <RelativeLayout
         android:layout_width="match_parent"
