--- a/src/main/res/layout/map_marker.xml
+++ b/src/main/res/layout/map_marker.xml
@@ -17,32 +17,27 @@
         android:layout_below="@+id/iv_marker"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="100dp"
+        android:layout_marginLeft="15dp"
+        >
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="名字是："
+        android:textColor="#FDFDFD"
+        android:textSize="12sp"
         />
     <TextView
         android:id="@+id/tv_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="类型是:"/>
+        android:textColor="#FDFDFD"
+        android:textSize="12sp"/>
     <TextView
         android:id="@+id/tv_sketch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="详情是:"/>
-    <TextView
-        android:id="@+id/tv_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="数字是:"/>
-    <TextView
-        android:id="@+id/tv_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="距离是:"/>
+        android:textColor="#FDFDFD"
+        android:textSize="12sp"/>
     </LinearLayout>
 </RelativeLayout>
