--- a/src/main/res/layout/activity_apply.xml
+++ b/src/main/res/layout/activity_apply.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.ApplyActivity">
+    tools:context=".View.ApplyActivity">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="@string/incubator"
+            android:text="申请入驻"
             android:textColor="@color/colorWhite"
             android:textSize="40px"/>
     </RelativeLayout>
@@ -97,6 +97,24 @@
             android:text="入驻时间  :"/>
         <EditText
             android:id="@+id/apply_time"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:hint=""/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <TextView
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:text="看房时间 :"/>
+        <EditText
+            android:id="@+id/apply_looktime"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="7"
