--- a/src/main/res/layout/activity_zhu_ce.xml
+++ b/src/main/res/layout/activity_zhu_ce.xml
@@ -11,7 +11,18 @@
         android:layout_marginTop="40dp"
         android:background="@android:drawable/edit_text"
         android:gravity="center_vertical"
-        android:hint="输入用户名或邮箱"
+        android:hint="输入手机号"
+        android:textColorHint="#999"
+        android:textScaleX="1" />
+
+    <EditText
+        android:id="@+id/shuruyanzhengma"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/username"
+        android:background="@android:drawable/edit_text"
+        android:gravity="center_vertical"
+        android:hint="请输入验证码"
         android:textColorHint="#999"
         android:textScaleX="1" />
 
@@ -19,12 +30,23 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_below="@id/username"
+        android:layout_below="@id/shuruyanzhengma"
         android:background="@android:drawable/edit_text"
         android:gravity="center_vertical"
-        android:hint="输入密码"
+        android:hint="输入你的密码"
         android:textColorHint="#999"
         android:textScaleX="1" />
+
+    <Button
+        android:id="@+id/huoquyanzhengma"
+        android:layout_width="120dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="96dp"
+        android:background="@android:color/transparent"
+        android:text="获取验证码"
+        android:textColor="@color/colorOringe"
+        android:textSize="10sp" />
 
     <Button
         android:id="@+id/zhuce"
@@ -38,24 +60,23 @@
         android:textColor="#FFF"
         android:textSize="18dp" />
 
-<TextView
-    android:id="@+id/tongyi"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="点击上面的按钮即表示您同意"
-    android:layout_centerHorizontal="true"
-    android:layout_below="@+id/zhuce"
-    android:layout_marginTop="20dp"/>
+    <TextView
+        android:id="@+id/tongyi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/zhuce"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="点击上面的按钮即表示您同意" />
 
     <Button
         android:id="@+id/fuwuxieyi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="《滴滴孵化器软件许可及服务协议》"
         android:layout_below="@+id/tongyi"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/colorPrimary"
-        android:background="@android:color/transparent"
         android:layout_centerHorizontal="true"
-        />
+        android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:text="《滴滴孵化器软件许可及服务协议》"
+        android:textColor="@color/colorPrimary" />
 </RelativeLayout>
