--- a/src/main/res/drawable/shape.xml
+++ b/src/main/res/drawable/shape.xml
@@ -4,7 +4,7 @@
     <!-- 填充的颜色 -->
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="15dip"></corners>
-    <solid android:color="@color/colorOringe"></solid>
+    <solid android:color="#2d2a2a"></solid>
     <!-- padding：Button里面的文字与Button边界的间隔 -->
     <padding
         android:bottom="10dp"
