--- a/src/main/res/layout/activity_about.xml
+++ b/src/main/res/layout/activity_about.xml
@@ -6,122 +6,131 @@
     android:orientation="vertical"
     android:showDividers="middle|end"
     android:divider="@drawable/line"
+    android:weightSum="10"
     tools:context="com.didiincubator.incubator.SetActivity">
 
-    <LinearLayout
+    <RelativeLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="#8FD3FD"
         >
         <ImageView
             android:id="@+id/about_back"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:src="@drawable/back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/icon_back"
             />
         <TextView
             android:id="@+id/history_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="85dp"
+            android:layout_centerInParent="true"
             android:text="关于我们"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            />
-    </LinearLayout>
+            android:textColor="#fff"/>
+    </RelativeLayout>
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="xxxxxx"
-        android:textSize="17sp"
-        />
-    <LinearLayout
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
+        android:layout_weight="0.2"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="10dp"
+        android:background="#d9d3d3"/>
+    <TextView
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:text="@string/about_text"
+        android:textSize="15sp"
+        />
+    <RelativeLayout
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="软件版本"
-            android:layout_gravity="center"
-            android:textSize="20sp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:textColor="@color/colorPrimary"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="90dp"
+            android:layout_centerInParent="true"
             android:text="1.0.0"
-            android:textSize="20sp"/>
-    </LinearLayout>
+            android:textSize="18sp"/>
+    </RelativeLayout>
 
-    <LinearLayout
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
+    <RelativeLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="0dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="微信关注"
-            android:layout_gravity="center"
-            android:textSize="20sp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:textColor="@color/colorPrimary"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="90dp"
-            android:text="didi"
-            android:textSize="20sp"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
+            android:layout_centerInParent="true"
+            android:text="               didiincubator"
+            android:textSize="18sp"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="0dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="客服电话"
-            android:layout_gravity="center"
-            android:textSize="20sp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:textColor="@color/colorPrimary"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="90dp"
-            android:text="12345678901"
-            android:textSize="20sp"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
+            android:layout_centerInParent="true"
+            android:text="                18224560133"
+            android:textSize="18sp"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="0dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="官方网站"
-            android:layout_gravity="center"
-            android:textSize="20sp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:textColor="@color/colorPrimary"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="90dp"
-            android:text="http://www.didi.com"
-            android:textSize="20sp"
-            />
-    </LinearLayout>
+            android:layout_centerInParent="true"
+            android:text="                              http://www.didi.com"
+            android:textSize="18sp"/>
+    </RelativeLayout>
 </LinearLayout>
