--- a/src/main/res/layout/activity_apply.xml
+++ b/src/main/res/layout/activity_apply.xml
@@ -5,30 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:weightSum="10"
     tools:context=".view.ApplyActivity">
     <RelativeLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/colorTitle">
-
+        android:background="#8FD3FD"
+        >
         <ImageView
-            android:id="@+id/details_btn_back"
+            android:id="@+id/about_back"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
-            android:src="@drawable/btn_back"/>
-
+            android:src="@drawable/icon_back"
+            />
         <TextView
-            android:id="@+id/details_text_title"
+            android:id="@+id/history_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="@string/incubator"
-            android:textColor="@color/colorWhite"
-            android:textSize="40px"/>
+            android:layout_centerInParent="true"
+            android:text="申请"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#fff"/>
     </RelativeLayout>
+
+    <TextView
+        android:layout_weight="0.2"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#d9d3d3"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -47,6 +56,7 @@
             android:layout_weight="7"
             android:hint="@string/appler_hint"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -66,6 +76,7 @@
             android:layout_weight="7"
             android:hint="请输入联系方式"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -120,21 +131,17 @@
             android:layout_weight="7"
             android:hint=""/>
     </LinearLayout>
+
     <Button
+        android:background="#a7eaa6"
         android:id="@+id/apply_submit"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="提交申请"/>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:layout_gravity="center_vertical"
-        android:background="#fff"/>
-
-
+        android:text="提交申请"
+        android:textColor="#6c6b6b"
+        android:textStyle="bold"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
