--- a/src/main/res/layout/activity_collection.xml
+++ b/src/main/res/layout/activity_collection.xml
@@ -5,33 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:weightSum="10"
     >
-    <LinearLayout
+    <RelativeLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="#8FD3FD"
         >
         <ImageView
             android:id="@+id/collection_back"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:src="@drawable/back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/icon_back"
             />
         <TextView
-            android:id="@+id/collection_text"
+            android:id="@+id/history_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="85dp"
+            android:layout_centerInParent="true"
             android:text="收藏"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            />
-    </LinearLayout>
+            android:textColor="#fff"/>
+    </RelativeLayout>
+
     <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:layout_weight="9"
         android:id="@+id/collection_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         ptr:ptrDrawable="@drawable/default_ptr_flip"
         ptr:ptrAnimationStyle="flip"
         >
