--- a/src/main/res/layout/activity_history.xml
+++ b/src/main/res/layout/activity_history.xml
@@ -5,29 +5,30 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".View.HistoryActivity">
-    <LinearLayout
+    <RelativeLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:background="#8FD3FD"
         >
         <ImageView
             android:id="@+id/history_back"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:src="@drawable/back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/icon_back"
             />
         <TextView
             android:id="@+id/history_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="85dp"
+            android:layout_centerInParent="true"
             android:text="历史记录"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            />
-    </LinearLayout>
+            android:textColor="#fff"/>
+    </RelativeLayout>
 
    <com.handmark.pulltorefresh.library.PullToRefreshExpandableListView
        android:id="@+id/history_list"
