--- a/src/main/res/layout/navigation_header.xml
+++ b/src/main/res/layout/navigation_header.xml
@@ -9,8 +9,10 @@
         <ImageView
             android:id="@+id/user_headicon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/app"/>
         <TextView
+            android:layout_marginLeft="30dp"
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
