登录界面布局

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
                     android:background="@drawable/edit_sousuo"
                     />
                 <Button
+                    android:background="#a0ffffff"
                     android:id="@+id/sousuo_incubator"
                     android:layout_width="0dp"
                     android:layout_weight="1"
