--- a/src/main/res/drawable/shape.xml
+++ b/src/main/res/drawable/shape.xml
@@ -3,13 +3,13 @@
     android:shape="rectangle">
     <!-- 填充的颜色 -->
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="15dip"></corners>
-    <solid android:color="#2d2a2a"></solid>
+    <corners android:radius="20dip"></corners>
+    <solid android:color="#a03da0de"></solid>
     <!-- padding：Button里面的文字与Button边界的间隔 -->
     <padding
-        android:bottom="10dp"
-        android:left="10dp"
-        android:right="10dp"
-        android:top="10dp"></padding>
+        android:bottom="5dp"
+        android:left="5dp"
+        android:right="5dp"
+        android:top="5dp"></padding>
 
 </shape>
