--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -3,17 +3,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background"
+    android:background="@drawable/icon_backgroundthree"
 
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/appPic"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/icon_didi"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="25dp"/>
 
     <TextView
         android:id="@+id/didizhdl"
@@ -58,7 +58,7 @@
         android:layout_below="@+id/mima"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
-        android:background="@color/smssdk_transparent"
+        android:background="@drawable/shape"
         android:text="登录"
         android:textSize="25sp"
         android:textColor="#fff"/>
@@ -132,7 +132,7 @@
         android:layout_marginLeft="10dp"
         android:textSize="18sp"
         android:layout_marginTop="15dp"
-        android:textColor="#c1bbbb"
+        android:textColor="#938e8e"
         />
 
     <CheckBox
@@ -154,6 +154,6 @@
         android:layout_marginLeft="10dp"
         android:textSize="16sp"
         android:layout_marginTop="15dp"
-        android:textColor="#c1bbbb"
+        android:textColor="#938e8e"
         />
 </RelativeLayout>
