--- a/src/main/res/layout/activity_message.xml
+++ b/src/main/res/layout/activity_message.xml
@@ -3,15 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.didiincubator.Activity.MessageActivity">
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#0f0"></android.support.v4.view.ViewPager>
+        android:background="#a0a1c5dc"></android.support.v4.view.ViewPager>
 
 </RelativeLayout>
