--- a/src/main/res/layout/activity_zhu_ce.xml
+++ b/src/main/res/layout/activity_zhu_ce.xml
@@ -45,7 +45,7 @@
         android:layout_marginTop="96dp"
         android:background="@android:color/transparent"
         android:text="获取验证码"
-        android:textColor="@color/colorOringe"
+        android:textColor="#0649c4"
         android:textSize="10sp" />
 
     <Button
