--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorTitle">#8FD3FD</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
-    <color name="colorRed">#FF0000</color>
+    <color name="colorRed">#ff4646</color>
     <color name="colorOringe">#ff7300</color>
     <color name="coloryellow">#ffcc00</color>
     <color name="umeng_socialize_comments_bg">#F4F4F4</color>
