--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -65,7 +65,16 @@
                     android:text="搜索"
                     />
             </LinearLayout>
+
             <include layout="@layout/egg_listview"></include>
+
+            <Button
+                android:id="@+id/routLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="驾车路线"
+                android:visibility="gone"
+                android:layout_gravity="right|bottom" />
         </FrameLayout>
     </LinearLayout>
     <android.support.design.widget.NavigationView
